# RaceTicker

./: .dockerignore  .gitignore  Dockerfile  README.md  design_doc.md  docker-compose.yml  pyproject.toml
config/: config.yaml
logs/: race_ticker.log.1  race_ticker.log.2  race_ticker.log.3
scripts/: docker-push.sh  run_dev.sh
src/race_ticker/: __init__.py  app.py
src/race_ticker/clock/: __init__.py  clock.py
src/race_ticker/config/: manager.py  schema.py
src/race_ticker/display/: __init__.py  controller.py
src/race_ticker/format/: __init__.py  formatter.py
src/race_ticker/ingest/: __init__.py  csv_fetcher.py  parser.py
src/race_ticker/web/static/: admin.css  admin.js  display.js
src/race_ticker/web/templates/: admin.html  display.html
